--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
+    "react-icons": "^5.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
