--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "next-video": "^1.0.1",
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
     "react-icons": "^5.0.1",
